policies/require-nonroot.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-run-as-nonroot
spec:
  validationFailureAction: Enforce
  background: true

  rules:
    - name: check-run-as-nonroot

      match:
        any:
          - resources:
              kinds:
                - Pod

      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kyverno
                - argocd

      validate:
        message: "Containers must run as non-root."

        pattern:
          spec:
            securityContext:
              runAsNonRoot: true
